--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <body>
     Welcome to my corner of the internet.
     THIS IS SO FREAKING COOL!!!!
+    :)
+    <img src="https://pbs.twimg.com/profile_images/1046968391389589507/_0r5bQLl_400x400.jpg" alt="happy puppy">
   </body>
 </html>
