playing around with titles

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
 
   <body>
-    Welcome to my corner of the internet.
-    THIS IS SO FREAKING COOL!!!!
-    :)
+    <h1>Welcome to my corner of the internet.</h1>W
+    <p>THIS IS SO FREAKING COOL!!!!</p>
+    <p>:) </p>
     <img src="https://pbs.twimg.com/profile_images/1046968391389589507/_0r5bQLl_400x400.jpg" alt="happy puppy">
   </body>
 </html>
