playing around with titles part dos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <h1>Welcome to my corner of the internet.</h1>W
+    <h1>Welcome to my corner of the internet.</h1>
     <p>THIS IS SO FREAKING COOL!!!!</p>
     <p>:) </p>
     <img src="https://pbs.twimg.com/profile_images/1046968391389589507/_0r5bQLl_400x400.jpg" alt="happy puppy">
